--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -4969,7 +4969,7 @@
   <header class="modal-header"><h2 class="modal-title"> Federal tax rates and income thresholds</h2></header>
   <div class="modal-body">
 
-<p class="lead hidden" id="fedcol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Federal tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
+<p id="fedcol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Federal tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratefed"></div>
   </div>
@@ -4979,7 +4979,7 @@
   <header class="modal-header"><h2 class="modal-title"> Federal tax rates and income thresholds</h2></header>
   <div class="modal-body">
 
-<p class="lead hidden" id="fedcol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Federal constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
+<p id="fedcol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Federal constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratefed"></div>
   </div>
@@ -4988,7 +4988,7 @@
 <section id="itrateall" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Provincial or territorial tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<p class="lead hidden" id="provcol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial or territorial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
+<p id="provcol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial or territorial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
 <details><summary>Manitoba tax rates and income thresholds</summary>  
 <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itrateman"></div>
@@ -5021,7 +5021,7 @@
 <section id="itrateall1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Provincial or territorial tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<p class="lead hidden" id="provcol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
+<p id="provcol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
       <details><summary>Manitoba tax rates and income thresholds</summary>  
 <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itrateman"></div>
@@ -5054,7 +5054,7 @@
 <section id="itratealb1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Alberta tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<p class="lead hidden" id="albcol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
+<p id="albcol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratealb"></div>
   </div>
@@ -5063,7 +5063,7 @@
 <section id="itratealb2" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Alberta tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<p class="lead hidden" id="albcol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
+<p id="albcol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratealb"></div>
   </div>
@@ -5072,7 +5072,7 @@
 <section id="itratebc" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> British Columbia tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<p class="lead hidden" id="bccol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
+<p id="bccol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratebc"></div>
   </div>
@@ -5081,7 +5081,7 @@
 <section id="itratebc1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> British Columbia tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<p class="lead hidden" id="bccol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
+<p id="bccol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratebc"></div>
   </div>
@@ -5090,7 +5090,7 @@
 <section id="itrateot" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Ontario tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<p class="lead hidden" id="oncol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
+<p id="oncol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itrateot"></div>
   </div>
@@ -5099,7 +5099,7 @@
 <section id="itrateot1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Ontario tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<p class="lead hidden" id="oncol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
+<p id="oncol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itrateot"></div>
   </div>
@@ -5142,7 +5142,7 @@
 <section id="itratepei" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Prince Edward Island tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<p class="lead hidden" id="peicol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
+<p id="peicol1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Provincial tax rate" (<strong>column&nbsp;3)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratepei"></div>
   </div>
@@ -5151,7 +5151,7 @@
 <section id="itratepei1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
   <header class="modal-header"><h2 class="modal-title"> Prince Edward Island tax rates and income thresholds</h2></header>
   <div class="modal-body">
-<p class="lead hidden" id="peicol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
+<p id="peicol2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Constant" (<strong>column&nbsp;4)</strong> that matches the range of the "Employee's annual taxable income" (<strong>columns&nbsp;1 and 2)</strong> </p>
 
        <div data-ajax-replace="/cra-arc/payroll/calculate/when/itrates.html #ajax-itratepei"></div>
   </div>
