--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -866,8 +866,8 @@ html:lang(fr) .cnjnctn-or:before {
                   <li>A corporation
 <div class="wb-fieldflow-sub"  data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
 <div class="wb-fieldflow-header">	
-<p class="wb-fieldflow-label">Is your corporation any of the following:</p>
-<div><ul>
+<p class="wb-fieldflow-label"><span aria-describedby="describedby3a describedby3b" id="describedby3a">Is your corporation any of the following:</span></p>
+<div id="describedby3b"><ul>
   <li><p>A registered charity for Canadian income tax purposes</p></li>
   <li><p>A cooperative housing corporation, hospital authority, municipality,&nbsp;para-municipal organization,&nbsp;public college, school authority, or university&nbsp;for Canadian GST/HST purposes</p></li>
   <li><p>A corporation wholly owned by an Indigenous governing body</p></li>
@@ -965,8 +965,8 @@ html:lang(fr) .cnjnctn-or:before {
                 <h4>Exemptions from paying the tax</h4>
                 <p>You <strong>must file</strong> an Underused Housing Tax return for the calendar year, <strong>even if</strong> you qualify for an exemption.</p>
               </div>
-              <p class="wb-fieldflow-label"><span id="labelledby1a" aria-labelledby="labelledby1a labelledby1b">As an affected owner of the residential property, are you one of the following:</span></p>
-              <div data-ajax-replace="#exp-1" class="gc-font-2019 mrgn-bttm-md" id="labelledby1b"></div>
+              <p class="wb-fieldflow-label"><span id="describedby1a" aria-describedby="describedby1a describedby1b">As an affected owner of the residential property, are you one of the following:</span></p>
+              <div data-ajax-replace="#exp-1" class="gc-font-2019 mrgn-bttm-md" id="describedby1b"></div>
             </div>
             <ul>
               <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex1", "class": "hidden", "live": true}'>Yes</li>
@@ -974,10 +974,10 @@ html:lang(fr) .cnjnctn-or:before {
                 <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4, #ex4-res", "class": "hidden", "live": true}}'>
                   <div class="wb-fieldflow-header">
                     <div class="gc-font-2019">
-                      <p class="wb-fieldflow-label"><span id="labelledby2a" aria-labelledby="labelledby2a labelledby2b labelledby2c labelledby2d">Is the residential property:</span></p>
-		      <div data-ajax-replace=" #exp-4-1" class="gc-font-2019 mrgn-bttm-md" id="labelledby2b"></div>
-                      <div data-ajax-replace=" #exp-4-2" class="gc-font-2019" id="labelledby2c"></div>
-			<details id="labelledby2d">
+                      <p class="wb-fieldflow-label"><span id="describedby2a" aria-describedby="describedby2a describedby2b describedby2c describedby2d">Is the residential property:</span></p>
+		      <div data-ajax-replace=" #exp-4-1" class="gc-font-2019 mrgn-bttm-md" id="describedby2b"></div>
+                      <div data-ajax-replace=" #exp-4-2" class="gc-font-2019" id="describedby2c"></div>
+			<details id="describedby2d">
 				<summary>Qualifying occupancy</summary>
 				<div data-ajax-replace=" #qual-occ-content>:not(.exempt-link-rem)"></div>
 			</details>
