--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Uniforms and protective clothing - Calculate payroll deductions and contributions - Canada.ca</title>
+         <title>Uniforms and special clothing - Calculate payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -88,7 +88,7 @@
 
 
 	  <li>
-      <a href="uniform.html" class="active" aria-current="page">Uniforms and protective clothing</a>
+      <a href="uniform.html" class="active" aria-current="page">Uniforms and special clothing</a>
     </li>
 	  <li class="p-0">
 	<hr class="brdr-bttm mrgn-tp-0">
@@ -280,7 +280,7 @@
     
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Uniforms and protective clothing</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Uniforms and special clothing</h1>
 
  <div class="alert alert-info">
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the current CRA administrative policy. </strong></p>
@@ -308,12 +308,12 @@
 
 
 <h2 id="h_1">Determine if the benefit is taxable</h2>
-<p class="mrgn-bttm-lg">Generally, if you provide special clothing, an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> to your employee, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
+<p class="mrgn-bttm-lg">Generally, if you provide special clothing or an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> for special clothing to your employee, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
 
 <h4>Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if <strong>one</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col">You provide a distinctive uniform or piece of protective clothing that your employee has to wear while carrying out the employment duties </li>
+<li class="cnjnctn-col">You provide a distinctive uniform that your employee has to wear while carrying out the employment duties </li>
 
 <li class="cnjnctn-col"><p>You reimburse or provide an accountable advance for a uniform or protective piece of clothing and <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm"> 
