--- a/payroll/calculate/benefit/template-benefit.html
+++ b/payroll/calculate/benefit/template-benefit.html
@@ -268,8 +268,8 @@
 
   
 	  <li>
-			<a href="uniform.html" class="hidden-xs hidden-sm">Uniforms and protective clothing</a>
-			<a href="uniform.html#gc-document-nav" class="visible-xs visible-sm">Uniforms and protective clothing</a>
+			<a href="uniform.html" class="hidden-xs hidden-sm">Uniforms and special clothing</a>
+			<a href="uniform.html#gc-document-nav" class="visible-xs visible-sm">Uniforms and special clothing</a>
       </li>
 <li>
 			<a href="zero-emission-vehicle.html" class="hidden-xs hidden-sm">Zero-emission vehicle - Charging stations and service plans</a>
