--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1031,8 +1031,8 @@ html:lang(fr) .cnjnctn-or:before {
                 <h4>Exemptions from paying the tax</h4>
                 <p>You <strong>must file</strong> an Underused Housing Tax return for the calendar year, <strong>even if</strong> you qualify for an exemption.</p>
               </div>
-              <p class="wb-fieldflow-label">As an affected owner of the residential property, are you one of the following:</p>
-              <div data-ajax-replace="#exp-1" class="gc-font-2019 mrgn-bttm-md"></div>
+              <p class="wb-fieldflow-label"><span id="labelledby4a" aria-labelledby="labelledby4a labelledby4b">As an affected owner of the residential property, are you one of the following:</span></p>
+              <div data-ajax-replace="#exp-1" class="gc-font-2019 mrgn-bttm-md" id="labelledby4b"></div>
             </div>
             <ul>
               <li data-wb-fieldflow='{"action": "removeClass", "source": "#exemption-yes, #ex1", "class": "hidden", "live": true}'>Yes</li>
