revised link statement

--- a/guides/alberta/onepager-new.html
+++ b/guides/alberta/onepager-new.html
@@ -962,6 +962,8 @@
 	
 </div>
 <h2 id="h-5">Download a copy of this content</h2>
+<p>The above information is also <a href="#">available in PDF</a></p>
+<!--
 <div class="row">
 <div class="col-sm-3"><div class="thumbnail p-sm-3">
 
@@ -975,6 +977,7 @@
 
 </div>
 </div>
+-->
 <div class="mwsbodytext text parbase section">
 
 <h2 id="h-6">Prior years</h2>
