--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1040,8 +1040,8 @@ html:lang(fr) .cnjnctn-or:before {
                 <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no, #ex1, #ex2, #ex3, #ex4, #ex4-res", "class": "hidden", "live": true}}'>
                   <div class="wb-fieldflow-header">
                     <div class="gc-font-2019">
-                      <p class="wb-fieldflow-label">Is the residential property:</p>
-                      <div data-ajax-replace="#exp-4-1-1" class="gc-font-2019"></div>
+                      <p class="wb-fieldflow-label">Does the residential property meet the criteria of qualifying occupancy?</p>
+                     
                       <details>
 				<summary>Qualifying occupancy</summary>
 				<div data-ajax-replace=" #qual-occ-content>:not(.exempt-link-rem)"></div>
