--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -241,6 +241,7 @@
             <li><span class="fas fa-check text-success fa-li"></span>Income is reported on a T4 slip for <strong>the year in which it is paid</strong>, regardless of when it was earned</li>
             <li><span class="fas fa-check text-success fa-li"></span>If your employee worked in <strong>more than one province or territory during the year</strong>, fill out a T4 slip for <strong>each </strong>province or territory</li>
             <li><span class="fas fa-check text-success fa-li"></span>Report, in dollars and cents, all amounts you paid during the year, except pension adjustment amounts, which are reported in dollars only</li>
+		 <li><span class="fas fa-check text-success fa-li"></span>A maximum of 10 digits, including cents, can be reported using box 14</li>    
             <li><span class="fas fa-check text-success fa-li"></span>Report all amounts in Canadian dollars, even if they were paid in another currency. Learn more about the average exchange rates: <a href="http://www.bankofcanada.ca/rates/exchange/">Exchange rates</a> </li>
             </ul>
             </div>
@@ -278,7 +279,7 @@
 </details>
 
             <h2 id="h-4">How to fill out</h2>
-          <p><strong>Before you fill out the T4 slip, </strong>make sure to review the list of <a href="#special" aria-controls="centred-popup" class="wb-lbx" role="button">special situation&nbsp;<span class="far fa-question-circle"></span></a>.  You can filter by key words to find information specific to your situation.</p> 
+          <p><strong>Before you fill out the T4 slip, </strong>make sure to review the list of <a href="#special" aria-controls="centred-popup" class="wb-lbx" role="button">special situations&nbsp;<span class="far fa-question-circle"></span></a>.  You can filter by key words to find information specific to your situation.</p> 
 <p> &nbsp;&nbsp; <a href="#ident" aria-controls="mid-screen" class="overlay-lnk" role="button"><span class="fas fa-eye text-muted"> </span> View examples of completed T4 slips in regular and special situations</a></p> 
 
          
@@ -435,23 +436,23 @@
 </ul>
 
 <p class="mrgn-tp-md">Enter an "X" or a check mark under <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> if one of the following apply:</p>
-<ul><li>You <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Canada Pension Plan">CPP</abbr> or <abbr title="Quebec Pension Plan">QPP</abbr> contributions for the <strong>full</strong> reporting period</li>
+<ul><li>You <strong>do not</strong> have to report any amount because you did not have to deduct <abbr title="Canada Pension Plan">CPP</abbr> or <abbr title="Quebec Pension Plan">QPP</abbr> contributions for the <strong>full</strong> reporting period</li>
 <li>You enter an employment code using <a href="#bx_29">box 29</a></li>
 </ul>
 </dd>
 
 <dt><abbr title="Employment insurance">EI</abbr></dt>
 <dd><p><strong>Do not</strong> use box 28 if you report <abbr title="Employment insurance">EI</abbr> premiums deducted using <a href="#bx_18">box 18</a> or <abbr title="Employment insurance">EI</abbr> insurable earnings using <a href="#bx_24">box 24</a>.</p>
-<p class="mrgn-tp-md">Enter an "X" or a check mark under <abbr title="Employment insurance">EI</abbr> if you <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Employment insurance">EI</abbr> premiums for the <strong>full</strong> reporting period.</p>
+<p class="mrgn-tp-md">Enter an "X" or a check mark under <abbr title="Employment insurance">EI</abbr> if you <strong>do not</strong> have to report any amount because you did not have to deduct <abbr title="Employment insurance">EI</abbr> premiums for the <strong>full</strong> reporting period.</p>
 </dd>
 
 <dt><abbr title="Provincial parental insurance plan">PPIP</abbr></dt>
 <dd><p><strong>Do not</strong> use box 28 if you report <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums using <a href="#bx_55">box 55</a> or <abbr title="Provincial parental insurance plan">PPIP</abbr> insurable earnings using <a href="#bx_56">box 56</a>.</p>
-<p class="mrgn-tp-md">Enter an "X" or a check mark under <abbr title="Provincial parental insurance plan">PPIP</abbr> if you <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums for the <strong>full</strong> reporting period.</p>
+<p class="mrgn-tp-md">Enter an "X" or a check mark under <abbr title="Provincial parental insurance plan">PPIP</abbr> if you <strong>do not</strong> have to report any amount because you did not have to deduct <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums for the <strong>full</strong> reporting period.</p>
 </dd>
 
 </dl>
- <p>Learn more: <a href="/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a> and  <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html">CPP/EI explained</a></p>
             </details>
 </li>
 	
@@ -585,6 +586,9 @@
 
 <li class="code-num mrgn-lft-md"> <details>  <summary>Box 14 – Employment income </summary>
             <p id="bx_14">Report your employee's total income before deductions using box 14. </p>
+
+<p>A maximum of 10 digits, including cents, can be reported using box 14.</p>
+
 <p>Depending on the type of payment you made, you may also need to report these amounts in "Other information" using specific codes. </p>
  <details> <summary>Type of payments included in employment income </summary>
 <p>Generally, you have to report using box 14 from:</p>
