--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -746,7 +746,7 @@
 
 
 <dt>Detached employee - Social security agreement</dt>
-<dd> <p>Report the amount you are paying for your employee <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16 if you use employment <a href="#outside1" aria-controls="centred-popup" class="wb-lbx" role="button">code 16 - Detached employee – Social security agreement&nbsp;<span class="far fa-question-circle"></span></a>. You, as the employer, is paying <abbr title="Canada Pension Plan">CPP</abbr> on behalf of the detached employee.</p>
+<dd> <p>Report the amount you are paying for your employee <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16 if you use employment <a href="#outside1" aria-controls="centred-popup" class="wb-lbx" role="button">code 16 - Detached employee – Social security agreement&nbsp;<span class="far fa-question-circle"></span></a>. You, as the employer, are paying <abbr title="Canada Pension Plan">CPP</abbr> on behalf of the detached employee.</p>
 
       </dd>
 
@@ -801,7 +801,7 @@
 </dl>
 <p>If required, the CRA may need to update the instructions during 2023. </p>
 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a></p>  
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html">CPP/EI Explained</a></p>  
 </details>	    	    
 	</li>
 
@@ -912,7 +912,7 @@
  </dd>
 </dl>
 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learnei.html">About the deduction of Employment Insurance (EI) premiums</a></p>         
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learnei.html">About the deduction of Employment Insurance (EI) premiums</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html">CPP/EI Explained</a></p>         
 
             </details>
 </li>
@@ -1251,7 +1251,7 @@
 			</li>
 
 <li class="code-num mrgn-lft-md"><details><summary>Code 33 – Medical travel assistance </summary> 
-            <p id="cd_33">Report the value of the <strong>medical travel portion only</strong> you provided to your employee living in a prescribed zone for medical travel assistance, using code 33 <strong>and</strong> the total value of the travel benefit using <a href="#cd_32">code 32</a>.</p>
+            <p id="cd_33">Report the value of the <strong>medical travel portion only</strong> if you provided travel assistance to your employee living in a prescribed zone using code 33 <strong>and</strong> the total value of the travel benefit using <a href="#cd_32">code 32</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14. </p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
             </details> 
