--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -494,8 +494,14 @@
 
  <details><summary>13 - Self-employed barbers and hairdressers</summary>
                <div id="ajax-barbers">
-                  <p id="bx_29_cd_13">Use code 13 if the worker you paid is a barber of a hairdresser providing their service in an establishment that offers barbering and hairdressing services and is <strong>not</strong> your employee. This includes if the person you paid is registered, or entitled to be registered under the Indian Act.</p>
-                 
+                  <p id="bx_29_cd_13">Use code 13 if the worker you paid is all of the following: </p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col">Barber or a hairdresser providing their service in an establishment that offers barbering and hairdressing services</li>
+<li class="cnjnctn-col"><strong>Not</strong> the owner or operator of the establishment</li>
+<li class="cnjnctn-col"><strong>Not</strong> your employee</li>
+</ul>
+<p>This includes if the person you paid is registered, or entitled to be registered under the Indian Act.</p>
+              
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/barbers.html">Payments to barbers and hairdressers</a>  and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained.html">Barbers and hairdressers - CPP/EI explained</a></p>
  </div></details>
 
