--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -247,7 +247,7 @@
 <li><span class="fas fa-check text-success fa-li"></span>Income replacement payments made under the Veterans Well-being Act </li>
 <li><span class="fas fa-check text-success fa-li"></span>Research grants </li>
 <li><span class="fas fa-check text-success fa-li"></span>Payments from a registered disability savings plan (RDSP) </li>
-<li><span class="fas fa-check text-success fa-li"></span>Wage-loss replacement plan payments if you were not required to withhold Canada Pension Plan (CPP) contributions and employment insurance (EI) premiums </li>
+<li><span class="fas fa-check text-success fa-li"></span>Wage-loss replacement plan payments if you were not required to withhold Canada Pension Plan (CPP) contributions and Employment Insurance (EI) premiums </li>
 <li><span class="fas fa-check text-success fa-li"></span>Death benefits </li>
 <li><span class="fas fa-check text-success fa-li"></span>Certain benefits paid to partnerships or shareholders  </li>
 
@@ -258,7 +258,7 @@
                  
                   <ul class="fa-ul">
 <li><span class="fas fa-times text-danger fa-li"> </span>If you are an agency, department or crown corporation and made payments for goods and services use: <a href="/cra-arc/payroll/file/t1204slip.html">T1204 slip - Government Service Contract Payments</a> </li>
-<li><span class="fas fa-times text-danger fa-li"></span>If you are an individual, partnership, trust, or a corporation with construction as their main business activity and made payments to subcontractors for construction services, use: <a href="/cra-arc/payroll/file/t5018slip.html">T5018 - Statement of contract payments </a> </li>
+<li><span class="fas fa-times text-danger fa-li"></span>If you are an individual, partnership, trust, or a corporation with construction as your main business activity and made payments to subcontractors for construction services, use: <a href="/cra-arc/payroll/file/t5018slip.html">T5018 - Statement of contract payments </a> </li>
 <li><span class="fas fa-times text-danger fa-li"></span>If you paid amounts or credited to a non-resident of Canada, such as interest, dividends, rental income, royalties, pension income, retiring allowances, or other similar types of passive income, use: <a href="/cra-arc/payroll/file/t4anrslip.html">T4A-NR slip, Statement of Amounts Paid or Credited to Non-Residents of Canada </a> </li>
 <li><span class="fas fa-times text-danger fa-li"></span>If you made payments from a retirement compensation arrangement, use: <a href="/cra-arc/payroll/file/t4arcaslip.html">T4A-RCA slips - Retirement Compensation Arrangement (RCA) trust</a> </li>
 <li><span class="fas fa-times text-danger fa-li"></span>If you paid income from a life income fund (LIF), use: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t4rif.html"> T4RIF slip, Statement of Income from a Registered Retirement Income Fund</a>. However, if a life annuity is bought from the proceeds of a LIF, the annuity payments have to be reported in box <strong>024 </strong>of a T4A slip </li>
@@ -367,7 +367,7 @@
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>No SIN</dt>
-<dd>Enter 9 zeros if you do not have the employee's SIN. You still have to file their T4 slip before the due date even if you cannot get a SIN from the recipient.  </dd>
+<dd>Enter 9 zeros if you do not have the employee's SIN. You still have to file their T4A slip before the due date even if you cannot get a SIN from the recipient.  </dd>
 <dt>SIN beginning with a 9 and received a permanent SIN</dt>
 <dd><p>Enter the permanent SIN if the recipient had a SIN beginning with a 9 and later in the year received a permanent SIN.</p>
 <p> <strong>Do not </strong>prepare 2 T4A slips. </p>
