--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -764,7 +764,7 @@
             </ul>      </dd>
 
  </dl>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a></p>         
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a> and  <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html">CPP/EI explained</a></p>         
 
             </details>
 </li>
@@ -867,7 +867,7 @@
 </dl>
 <p>If required, the CRA may need to update the instructions during 2023. </p>
 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a></p>  
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html">CPP/EI explained</a></p>  
 </details>           
         </li>
 
