--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -867,7 +867,7 @@
 </dl>
 <p>If required, the CRA may need to update the instructions during 2023. </p>
 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html">CPP/EI explained</a></p>  
+<p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-pension-plan-contributions/">Québec Pension Plan Contributions | Revenu Québec</a></p> 
 </details>           
         </li>
 
