--- a/payroll/calculate/payment/indianact.html
+++ b/payroll/calculate/payment/indianact.html
@@ -259,21 +259,12 @@
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
 </div>
 
-<p><span class="fa fa-balance-scale fa-lg text-muted"></span> For purposes of the tax exemption under section 87 of the Indian Act, the term Indian is used because it has a legal meaning in the Indian Act. Section 87 of the Indian Act exempts from taxation the personal property of an Indian situated on a reserve. The section 87 exemption:</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">Only applies to an Indian as defined by the Indian Act</li>
-<li class="cnjnctn-col">Does <strong>not</strong> apply to all Indigenous Peoples in Canada such as the Inuit or Métis. </li>
-</ul>
+<p><span class="fa fa-balance-scale fa-lg text-muted"></span> We recognize that many First Nations people in Canada prefer not to describe themselves as Indians. However, we sometimes use the term “Indian” because it has a legal meaning in the Indian Act. The term “First Nations employee” is used to describe an individual who is registered or entitled to be registered under the Indian Act.</p>
 
  <h2 class="h3">On this page</h2>
   	
 <ul>
-
-<li><a href="#h_1">Determine the status of the employee</a></li>
-<li><a href="#h_2">Determine the residency of the employee or employer</a></li>
-<li><a href="#h_3">Determine the percentage of duties related to employment on a reserve</a></li>
-<li><a href="#h_5">Withhold payroll deductions and remit GST/HST</a></li>
-<li><a href="#h_6">Report the employment income on a slip</a></li>
+<li><a href="#h_1">Steps</a></li>
 <li><a href="#h_7">References</a>
 </li>
 </ul>
