--- a/payroll/calculate/payment/indianact.html
+++ b/payroll/calculate/payment/indianact.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Employee who is registered, or entitled to be registered under the Indian Act - Calculate payroll deductions and contributions - Canada.ca</title>
+         <title>Payments to First Nations workers - Calculate payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -88,7 +88,7 @@
     
   <ul class="noline">    
  <li>
-	 <a href="indianact.html" class="active" aria-current="page">Employee who is registered, or entitled to be registered under the Indian Act</a>
+	 <a href="indianact.html" class="active" aria-current="page">Payments to First Nations workers</a>
 	</li>
  <li class="p-0">
 	<hr class="brdr-bttm mrgn-tp-0">
@@ -254,12 +254,12 @@
   </ul>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Employee who is registered, or entitled to be registered under the Indian Act</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Payments to First Nations workers</h1>
 <div class="alert alert-info">
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the existing legislative requirement or to the CRA administrative policy. </strong></p>
 </div>
 
-<p><span class="fa fa-balance-scale fa-lg text-muted"></span> We recognize that many First Nations people in Canada prefer not to describe themselves as Indians. However, we sometimes use the term “Indian” because it has a legal meaning in the Indian Act. The term “First Nations employee” is used to describe an individual who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a> .</p>
+<p><span class="fa fa-balance-scale fa-lg text-muted"></span> We recognize that many First Nations people in Canada prefer not to describe themselves as Indians. However, we sometimes use the term “Indian” because it has a legal meaning in the Indian Act. The term “First Nations workers” is used to describe an individual who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a> .</p>
 
  <h2 class="h3">On this page</h2>
   	
@@ -314,7 +314,7 @@
 </details>
  </li>
   <li>
-<h3 id="h_2">Determine the residency of the employee or employer</h3>
+<h3 id="h_2">Determine the residency of the worker or payer</h3>
 
 <details><summary>Situation: Your employee lives on a reserve and you are a resident on a reserve </summary>
 <h4>Exempt income situation</h4>
