--- a/payroll/calculate/payment/template-payment.html
+++ b/payroll/calculate/payment/template-payment.html
@@ -117,8 +117,6 @@
       <a href="employee-leaving.html#gc-document-nav" class="visible-xs visible-sm"> Employee who is leaving</a></li>
 <li><a href="employee-parental.html" class="hidden-xs hidden-sm">Employee who is on parental leave</a>
       <a href="employee-parental.html#gc-document-nav" class="visible-xs visible-sm"> Employee who is on parental leave</a></li>
-<li><a href="indianact.html" class="hidden-xs hidden-sm">Employee who is registered, or entitled to be registered under the Indian Act</a>
-      <a href="indianact.html#gc-document-nav" class="visible-xs visible-sm">Employees who is registered, or entitled to be registered under the Indian Act</a></li>
 
 <li><a href="employee-outcanada.html" class="hidden-xs hidden-sm">Employee who is working outside Canada for a Canadian company or the Canadian government</a>
       <a href="employee-outcanada.html#gc-document-nav" class="visible-xs visible-sm"> Employee who is working outside Canada for a Canadian company or the Canadian government</a></li>
@@ -179,6 +177,10 @@
  </a>
 <a href="death-benefit.html#gc-document-nav" class="visible-xs visible-sm"> Payments related to death benefits
 </a></li>
+
+<li><a href="indianact.html" class="hidden-xs hidden-sm">Payments to First Nations workers</a>
+      <a href="indianact.html#gc-document-nav" class="visible-xs visible-sm">Payments to First Nations workers</a></li>
+
 <li><a href="pension.html" class="hidden-xs hidden-sm"> Payments related to pension or superannuation
  </a>
 <a href="pension.html#gc-document-nav" class="visible-xs visible-sm"> Payments related to pension or superannuation
