--- a/payroll/calculate/payment/indianact.html
+++ b/payroll/calculate/payment/indianact.html
@@ -261,6 +261,8 @@
 
 <p><span class="fa fa-balance-scale fa-lg text-muted"></span> We recognize that many First Nations people in Canada prefer not to describe themselves as Indians. However, we sometimes use the term “Indian” because it has a legal meaning in the Indian Act. The term “First Nations workers” is used to describe an individual who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a> .</p>
 
+<p>You must report all income and deductions on a T4 or T4A slip for First Nations wokers regardless of whether their income is taxable or exempt. </p>
+
  <h2 class="h3">On this page</h2>
   	
 <ul>
@@ -270,7 +272,6 @@
 </ul>
 <p><strong>Indians </strong>who want to determine if their income is taxable should fill out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/td1-in.html">Form TD1-IN, Determination of Exemption of an Indian's Employment Income</a>.</p>
 
-<p>You must report all income and deductions on a T4 slip for status Indian employees regardless of whether their income is taxable or exempt. </p>
 <details><summary>Terms used on this page</summary>
 <dl class="dl-horizontal">
 <dt>Employer is resident on a reserve</dt><dd>
